--- a/Solution/#97 Snowman.html
+++ b/Solution/#97 Snowman.html
@@ -1,38 +1,57 @@
-<!-- Still working on the hat part :) -->
-<b><e><r>
+<b><r><h><e><j><k>
 <style>
-  body{
+  body {
     background: #AC474B;
   }
-  *{
+  * {
     position: fixed;
+    margin: 0;
   }
-  b{
-    background: #fff;
-    height: 100;
-    width: 100;
-    border-radius: 50%;
-    left: 150;
-    top: 145;
-    box-shadow: 0 -70px 0 -20px #fff;
-  }
-  e{
+  e {
+    height: 10;
+    width: 10;
     background: #0E1F2B;
-    height:10;
-    width:10;
-    border-radius:50%;
+    border-radius: 1in;
     left: 185;
-    top:113;
-    box-shadow: 20px 0;
+    top: 113;
+    box-shadow: 20px 0  0 #0E1F2B;
   }
-  r{
-    background:#FFA63F;
-    height:10;
-    width:60;
-    top:143;
-    left:170;
-    border-radius:1in;
-    box-shadow: 0 0 0 4px #AC474B;
+  b {
+    height: 60;
+    width: 60;
+    background: #fff;
+    border-radius: 1in;
+    top: 95;
+    left: 170;
+    box-shadow: 0 70px 0 20px #fff;
   }
-  
+  r {
+    background: #FFA63F;
+    height: 11;
+    width: 60;
+    top: 138;
+    left: 166;
+    border-radius: 1in;
+    border: 4px solid #AC474B;
+  }
+  h {
+    background: #0E1F2B;
+    height: 5;
+    width: 60;
+    top: 95;
+  }
+  k {
+    background: #fff;
+    height: 10;
+    width: 40;
+    top: 70;
+    left: 180;
+  }
+  j {
+    background: #0E1F2B;
+    height: 40;
+    width: 40;
+    top: 55;
+    left: 180;
+  }
 </style>
